--- a/index.html
+++ b/index.html
@@ -13,27 +13,33 @@
         </div>
         <div id="buttons">
             <div class="row" id="row1">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="divide">÷</button>
+                <button id="left">(</button>
+                <button id="right">)</button>
+                <button id="del">DEL</button>
+                <button id="clr">CLR</button>
             </div>
             <div class="row" id="row2">
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
-                <button id="multiply">×</button>
+                <button id="seven" class="number">7</button>
+                <button id="eight" class="number">8</button>
+                <button id="nine" class="number">9</button>
+                <button id="divide" class="operation">÷</button>
             </div>
             <div class="row" id="row3">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="subtract">-</button>
+                <button id="four" class="number">4</button>
+                <button id="five" class="number">5</button>
+                <button id="six" class="number">6</button>
+                <button id="multiply" class="operation">×</button>
             </div>
             <div class="row" id="row4">
-                <button id="0">0</button>
-                <button id=".">.</button>
-                <button id="add">+</button>
+                <button id="one" class="number">1</button>
+                <button id="two" class="number">2</button>
+                <button id="three" class="number">3</button>
+                <button id="subtract" class="operation">-</button>
+            </div>
+            <div class="row" id="row5">
+                <button id="0" class="number">0</button>
+                <button id="decimal">.</button>
+                <button id="add" class="operation">+</button>
                 <button id="evaluate">=</button>
             </div>
         </div>
